--- a/src/assets/jsons/personal_projects.json
+++ b/src/assets/jsons/personal_projects.json
@@ -1,5 +1,48 @@
 [
 	{
+		"title": "Reverse 2048",
+		"description": [
+			"Write C++ code for a program that reads in an unknown num- ber of “Reverse 2048” games. The program must then use an algorithm to solve each of the solvable puzzles given in the input file", 
+			"Reverse 2048 is a variation of the classic 2048 puzzle game, a sliding tile game that is played on a 4×4 grid. Unlike the original game, where the goal is to merge tiles to reach 2048, in Reverse 2048, the player must divide tiles to reach the smallest possible value, typically tile 2. The game is played using numerical tiles, each having values that are powers of 2. The main rules of the game are:", 
+			"1) Players slide tiles in four possible directions (up, down, left, right).",
+			"2) When two tiles of the same value collide, they merge into one tile with half the value.",
+			"3) The game ends when there are no more valid moves or when the smallest achievable value has been reached."
+		],
+		"image": "https://raw.githubusercontent.com/mphomolefe730/portfolio-website/refs/heads/main/src/assets/website_images/reverse_2048.png",
+		"timeline": [
+			{
+				"date": "Problem to be solved",
+				"description": "Develop a C++ program that can solve any given configuration of Reverse 2048 based on specified project requirements and constraints. Since the game requires a different strategic approach than traditional 2048, implementation must optimize moves to reach the smallest tile possible (tile with a value of 2) before the board becomes full."
+			},{
+				"date": "Initial Board Setup",
+				"description": "The board consists of a 4×4 grid initially filled with 2 tiles having a value of 2048. New tiles appear after each move, following a random pattern. The new tiles have large numerical values of either 2048 or 1024 (no tile value lower than this should appear on the grid)"
+			},{
+				"date": "Movement",
+				"description": "Players can slide all tiles in a chosen direction (left, right, up, down). When two tiles of the same value collide, they merge into one tile with half the value. For example, Two 2048s combine into a 1024, Two 1024s combine into a 512, and so on, all down to two 4s combine into a 2. A move is valid only if at least one tile can be merged or moved."
+			},{
+				"date": "End Condition",
+				"description": "The game is won if a tile of value 2 is reached before the board becomes full. The game is lost if there are no valid moves left."
+			},{
+				"date": "Project Constraints",
+				"description": "Develop two different algorithms that will play Reverse 2048 against each other. The selected algorithms will exclusively be referred to as Alg 1 and Alg 2. The two algorithms will play against each other on separate boards at the same time. The game will start at the same spot on the both boards. The first algorithm to complete the game will be considered the winner. A maximum of 1000 moves per game per algorithm is allowed. If this limit is exceeded, the game ends as unsolved."
+			},{
+				"date": "Input Data",
+				"description": "The file holding the configurations is called reverse 2048.txt. An example of the input would be as follows: 512 , 3 (a game of reverse 512 on a board size of 3 × 3)"
+			}
+		],
+		"resource_images": [
+			{
+				"title": "C++",
+				"image_link": "https://raw.githubusercontent.com/mphomolefe730/portfolio-website/refs/heads/main/src/assets/logos/ISO_C++_Logo.png"
+			}
+		],
+		"warning": false,
+		"project_status": "Done",
+		"project_link": "https://github.com/mphomolefe730/reverse-2048-game",
+		"video_link": "https://drive.google.com/file/d/1GrIg0EkcoKcyRTy5-fTH2AJKxaQ4Fymm/preview",
+		"category": ["all","personal"],
+		"last_update": "27 April 2025"
+	},{
 		"title": "Social Media",
 		"description": ["Tasked to design a new social media network, inspired by existing platforms like Facebook, TikTok, Twitter, and Instagram, that connects individuals and businesses."],
 		"image": "https://raw.githubusercontent.com/mphomolefe730/portfolio-website/refs/heads/main/src/assets/website_images/social_media.png",
