--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
+    "firebase": "^11.6.1",
+    "firebase-tools": "^13.35.1",
     "gh-pages": "^6.2.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
